changed get request methods for movies

--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -2,4 +2,4 @@ lab2.contextFactory=weblogic.jndi.WLInitialContextFactory
 lab2.providerUrl=t3://localhost:7001
 lab2.contextData=lab2
 
-lab2.url=http://localhost:8090/message
+lab2.url=http://localhost:8090/message?movieName=
